from decimal import Decimal, ROUND_HALF_UP

from django.core.exceptions import ValidationError
from django.db import models

"""
Module models cho app `products`.

Nhóm model chính:
- Product: thông tin sản phẩm bán ra.
- Cart, CartItem: giỏ hàng và các dòng sản phẩm trong giỏ.
"""

# Quy uoc lam tron tien ve 2 chu so thap phan.
MONEY_QUANTIZE = Decimal("0.01")
# Co so de tinh phan tram giam gia.
PERCENT_BASE = Decimal("100")


class Product(models.Model):
    """Thông tin một sản phẩm trong hệ thống."""

    # Thuộc tính mô tả và định danh sản phẩm.
    product_name = models.CharField(max_length=255)
    category = models.CharField(max_length=100)
    description = models.TextField(blank=True, null=True)
    # Thuộc tính giá/bán hàng.
    price = models.DecimalField(max_digits=12, decimal_places=2)
    discount_percent = models.DecimalField(max_digits=5, decimal_places=2, default=0)
    stock_quantity = models.IntegerField(default=0)
    image = models.ImageField(upload_to="products/images/", blank=True, null=True)
    image_url = models.URLField(max_length=500, blank=True, null=True)
    created_at = models.DateTimeField(auto_now_add=True)

    def __str__(self) -> str:
        return self.product_name

    @property
    def discounted_price(self) -> Decimal:
        """
        Giá sau giảm của sản phẩm.

        Công thức:
        - discount_amount = price * discount_percent / 100
        - discounted_price = price - discount_amount (không âm)
        """
        discount_percent = self.discount_percent or Decimal("0")
        discount_amount = (self.price * discount_percent / PERCENT_BASE).quantize(
            MONEY_QUANTIZE,
            rounding=ROUND_HALF_UP,
        )
        final_price = self.price - discount_amount
        return max(final_price, Decimal("0")).quantize(MONEY_QUANTIZE, rounding=ROUND_HALF_UP)

    @property
    def formatted_price(self) -> str:
        """Giá đã giảm, định dạng chuỗi VND để hiển thị UI."""
        rounded = self.discounted_price.quantize(Decimal("1"), rounding=ROUND_HALF_UP)
        amount = int(rounded)
        return f"{amount:,}".replace(",", ".") + " đ"

    @property
    def formatted_original_price(self) -> str:
        """Giá gốc chưa giảm, định dạng chuỗi VND."""
        rounded = self.price.quantize(Decimal("1"), rounding=ROUND_HALF_UP)
        amount = int(rounded)
        return f"{amount:,}".replace(",", ".") + " đ"

    def clean(self) -> None:
        """
        Validate dữ liệu sản phẩm theo rule nghiệp vụ.

        Các rule:
        - price >= 0
        - stock_quantity >= 0
        - 0 <= discount_percent <= 100
        """
        errors = {}

        # Rang buoc gia, ton kho va ty le giam gia.
        if self.price is not None and self.price < 0:
            errors["price"] = "Gia ban khong duoc am."

        if self.stock_quantity is not None and self.stock_quantity < 0:
            errors["stock_quantity"] = "So luong ton kho khong duoc am."

        if self.discount_percent is not None and (
            self.discount_percent < 0 or self.discount_percent > PERCENT_BASE
        ):
            errors["discount_percent"] = "Phan tram giam gia phai tu 0 den 100."

        if errors:
            raise ValidationError(errors)


class Cart(models.Model):
    """Giỏ hàng của một khách hàng (mỗi khách 1 giỏ)."""

    customer = models.OneToOneField("accounts.Customer", on_delete=models.CASCADE, related_name="cart")
    updated_at = models.DateTimeField(auto_now=True)

    def __str__(self) -> str:
        """Chuỗi đại diện gọn cho Cart."""
        return f"Cart #{self.pk} - Customer {self.customer_id}"

    @property
    def total_items(self) -> int:
        """Tổng số lượng sản phẩm trong giỏ (cộng quantity từng dòng)."""
        return sum(item.quantity for item in self.items.all())

    @property
    def total_amount(self) -> Decimal:
        """Tổng tiền giỏ hàng (cộng sub_total của tất cả dòng)."""
        return sum((item.sub_total for item in self.items.all()), Decimal("0"))


class CartItem(models.Model):
    """Một dòng sản phẩm trong giỏ hàng."""

    # Quan hệ tới giỏ hàng và sản phẩm.
    cart = models.ForeignKey("products.Cart", on_delete=models.CASCADE, related_name="items")
    product = models.ForeignKey("products.Product", on_delete=models.CASCADE, related_name="cart_items")
    # Dữ liệu tính tiền của dòng giỏ hàng.
    quantity = models.PositiveIntegerField(default=1)
    is_selected = models.BooleanField(default=True)
    sub_total = models.DecimalField(max_digits=12, decimal_places=2, default=0)
    discount_amount = models.DecimalField(max_digits=12, decimal_places=2, default=0)

    def __str__(self) -> str:
        """Chuỗi đại diện gọn cho CartItem."""
        return f"CartItem #{self.pk} - Cart {self.cart_id} - Product {self.product_id}"

    @property
    def line_total_before_discount(self) -> Decimal:
        """Tiền gốc dòng giỏ hàng trước giảm giá = giá sản phẩm * quantity."""
        if not self.product_id:
            return Decimal("0")

        return (self.product.price * Decimal(self.quantity or 0)).quantize(
            MONEY_QUANTIZE,
            rounding=ROUND_HALF_UP,
        )

    def clean(self) -> None:
        """
        Validate dữ liệu dòng giỏ hàng.

        Các rule:
        - quantity >= 1
        - quantity không vượt quá tồn kho hiện tại của sản phẩm
        """
        errors = {}

        # Kiem tra so luong theo ton kho hien tai cua san pham.
        if self.quantity < 1:
            errors["quantity"] = "So luong phai lon hon 0."

        if self.product_id and self.quantity > self.product.stock_quantity:
            errors["quantity"] = "So luong vuot qua ton kho hien tai."

        if errors:
            raise ValidationError(errors)

    def recalculate_amounts(self) -> None:
        """
        Tính lại `discount_amount` và `sub_total` cho CartItem.

        Lưu ý:
        - Nếu chưa gắn sản phẩm thì tiền = 0.
        - Tiền giảm không vượt quá tiền gốc dòng.
        """
        if not self.product_id:
            self.discount_amount = Decimal("0")
            self.sub_total = Decimal("0")
            return

        gross_amount = self.line_total_before_discount
        discount_percent = self.product.discount_percent or Decimal("0")
        discount_amount = (gross_amount * discount_percent / PERCENT_BASE).quantize(
            MONEY_QUANTIZE,
            rounding=ROUND_HALF_UP,
        )

        # Chan so tien giam toi da bang tien goc cua dong gio hang.
        if discount_amount > gross_amount:
            discount_amount = gross_amount

        self.discount_amount = discount_amount
        self.sub_total = (gross_amount - discount_amount).quantize(
            MONEY_QUANTIZE,
            rounding=ROUND_HALF_UP,
        )

    def save(self, *args, **kwargs):
        """Ghi đè save để luôn cập nhật tiền tự động trước khi lưu."""
        # Tu dong cap nhat tien giam va thanh tien truoc khi luu.
        self.recalculate_amounts()
        super().save(*args, **kwargs)



