@startuml
title Biểu đồ lớp - Hệ thống quản lý bán hàng Django

skinparam classAttributeIconSize 0
hide empty members
left to right direction

class User <<Django Auth>> {
  - id: int
  - username: string
  - email: string
  - password: string
  - is_staff: bool
  - is_active: bool
}

class Customer {
  - id: int
  - full_name: string
  - phone_number: string
  - address: text?
  - date_of_birth: date?
  - gender: Nam|Nu|Khac
}

class Wallet {
  - id: int
  - balance: bigint
}

class TopUpRequest {
  - id: int
  - amount: bigint
  - note: text?
  - status: PENDING|APPROVED|REJECTED
  - created_at: datetime
}

class Product {
  - id: int
  - product_name: string
  - category: string
  - description: text?
  - price: decimal(12,2)
  - discount_percent: decimal(5,2)
  - stock_quantity: int
  - image: ImageField?
  - image_url: URLField?
  - created_at: datetime
}

class Cart {
  - id: int
  - created_at: datetime
  - updated_at: datetime
}

class CartItem {
  - id: int
  - quantity: int
  - is_selected: bool
  - sub_total: decimal
  - discount_amount: decimal
}

class Order {
  - id: int
  - sub_total_amount: decimal(12,2)
  - discount_amount: decimal(12,2)
  - total_amount: decimal(12,2)
  - status: PAID|CANCELLED
  - created_at: datetime
  - is_paid: bool
}

class OrderDetail {
  - id: int
  - quantity: int
  - unit_price: decimal(12,2)
  - discount_percent: decimal(5,2)
  - discount_amount: decimal(12,2)
  - sub_total: decimal(12,2)
}

' =====================
' Nhóm tài khoản - khách hàng
' =====================

User "1" -- "0..1" Customer : hồ sơ
Customer "1" -- "1" Wallet : ví tiền
Customer "1" -- "0..*" TopUpRequest : yêu cầu nạp tiền

' =====================
' Nhóm giỏ hàng
' =====================

Customer "1" -- "0..1" Cart : giỏ hàng
Cart "1" -- "0..*" CartItem : chứa
Product "1" -- "0..*" CartItem : trong giỏ

' =====================
' Nhóm đơn hàng
' =====================

Customer "1" -- "0..*" Order : đặt hàng
Order "1" -- "1..*" OrderDetail : gồm
Product "1" -- "0..*" OrderDetail : được mua

' =====================
' Quyền quản trị
' =====================

User ..> Product : Admin/Staff quản lý
User ..> Customer : Admin/Staff quản lý
User ..> TopUpRequest : Admin/Staff duyệt

note right of User
  is_staff = true:
  có quyền quản trị.

  is_active = false:
  tài khoản bị khóa.
end note

note bottom of Product
  Mỗi sản phẩm chỉ có 1 ảnh chính.
  Ảnh lưu trong media,
  đường dẫn ảnh lưu trong MySQL.
end note

note bottom of Customer
  Admin/Staff có thể:
  xem, sửa, khóa/mở khóa
  hoặc xóa khách hàng.
end note
@enduml